Tests end-to-end

--- a/pumba/static/base.css
+++ b/pumba/static/base.css
@@ -19,3 +19,9 @@ body {
     text-align: center;
     font-size: large
 }
+
+.notification {
+    color: green;
+    text-align: center;
+    font-size: large
+}
