--- a/pumba/static/base.css
+++ b/pumba/static/base.css
@@ -1,5 +1,5 @@
 body {
-    background-color: aquamarine;
+    background-color: azure
 }
 .header {
     text-align: center
@@ -8,6 +8,7 @@ body {
     margin-left:auto; 
     margin-right:auto;
     border: 3px solid skyblue;
+    clear: both;
 }
 
 .matchmaking_table_row {
@@ -17,11 +18,22 @@ body {
 .error {
     color: red;
     text-align: center;
-    font-size: large
+    font-size: large;
+    clear: both
 }
 
 .notification {
     color: green;
     text-align: center;
-    font-size: large
+    font-size: large;
+    clear: both;
+}
+
+h2 {
+    text-align: center;
+    clear: both;
+}
+
+h1 {
+    text-align: center;
 }
