--- a/pumba/static/base.css
+++ b/pumba/static/base.css
@@ -4,17 +4,21 @@ body {
 .header {
     text-align: center
 }
-.matchmaking_table {
-    margin-left:auto; 
-    margin-right:auto;
-    border: 3px solid skyblue;
-    clear: both;
+
+.menu-button {
+    background-color: teal;
+    border: none;
+    color: white;
+    padding: 7px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
-.matchmaking_table_row {
-    border: 3px solid skyblue;
+.menu-button:hover {
+    background-color: darkslateblue
 }
-
 .error {
     color: red;
     text-align: center;
